<?xml version="1.0"?>
<package format="2">
  <name>cfr_calculator</name>
  <version>0.0.0</version>
  <description>The cfr_calculator package</description>

  <maintainer email="hiraoka@jsk.imi.i.u-tokyo.ac.jp">Naoki-Hiraoka</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>choreonoid</depend>

  <depend>primitive_motion_level_msgs</depend>
  <depend>primitive_motion_level_tools</depend>
  <depend>static_equilibuim_test</depend>

</package>
